--- a/memoria.Rmd
+++ b/memoria.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "proyectoTID"
-author "Alejandro Casado Quijada y Gustavo Rivas Gervillas"
+author: "Alejandro Casado Quijada y Gustavo Rivas Gervillas"
 output: pdf_document
 ---
 
@@ -10,20 +10,30 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Introducción
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Descripción del dataset
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Este dataset contiene datos recogidos de la aplicacion *PokemonGo*, esta aplicación es un juego de realidad aumeta que emplea el GPS del móvil para principalmente localizar y capturar pokemon en el mundo real. El dataset contiene 296021 muestras cada una de las cuales dispone de los siguientes campos:
 
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+* *pokemonId*: el identificador del pokemon, denota su clase.
+* *latitude*: latitud de la posición donde se ha localizado el pokemon.
+* *longitude*: longitud de la posición donde se ha localizado el pokemon.
+* *appearedLocalTime*: momento exacto en el que se encontró el pokemon, con el formato yyyy-mm-ddThh-mm-ss.ms.
+* *cellId 90-5850m*: la localización goegráfica del pokemon proyectada en una celda S2.
+* *appearedTimeOfDay*: momento del día en el que apareció el pokemon (night, evening, afternoon, morning).
+* *appearedHour*: hora local de una observación del pokemon.
+* *appearedMinute*: minuto local de una observación del pokemon.
+* *appearedDayOfWeek*: día de la semana en la que se produjo el avistamiento (Monday, Tuesday, Wednesday, Thursday, Friday, Saturdy, Sunday).
+* *appearedDay*: día del avistamiento.
+* *appearedMonth*: mes del avistamiento.
+* *appearedYear*: año del avistamiento.
+* *terrainType*: tipo del terreno donde se avistó el pokemon. Este dato viene dado por un valor número según una [tabla de tipos de terreno](http://glcf.umd.edu/data/lc/).
+* *closeToWater*: si está el pokemon a 100m del agua o no.
+* *city*: ciudad donde se ha visto el pokemon.
+* *continent*: continente donde se ha avistado el pokemon.
+* *weather*: un string indicando el tiempo que hacía en el momento del avistamiento.
+* *temperature*: temperatura en grados Celsius en el momento del avistamiento.
+* *windSpeed*: velocidad del viento en el momento del avistamiento km/h.
+* *windBearing*: dirección del viento entre 0 y 360 grados.
+* *pressure*: presión en el momento del avistamiento en bares.
+* *weatherIcon*: el tiempo atmosférico en el momento del avistamiento clasificado según un sistema de categorías más simple que el empleado en *weather* (fog, clear-night, partly-cloudy-night, partly-cloudy-day, cloudy, clear-day, rain, wind).
+* *
